--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "SHIVANSH ROBOT",
+    "name": "SHUBHAM ROBOT",
     "description": "Telegram Group Management Bot.",
     "logo": "https://telegra.ph/file/d9bddd89a8070632de73e.jpg",
     "keywords": [
@@ -66,7 +66,7 @@
     "OWNER_ID": {
        "description": "Your user ID as an integer.",
        "required": true,
-       "value": "6762113050"
+       "value": "2047725696"
     },
     "START_IMG": {
        "description": "Telegraph link of the image which will be shown at start command.",
@@ -76,7 +76,7 @@
     "SUPPORT_CHAT": {
        "description": "Your Telegram support group chat username where your users will go and bother you with shit Example - The_support_chat.",
        "required": true,
-       "value": "MASTIWITHFRIENDSXD"
+       "value": "Mrpasserby_1227"
     },
     "TOKEN": {
        "description": "Get bot token from @BotFather on TG",
